# rsue-document-repository-university

./: .env.example  .gitignore  2017год_Бакалавриат_38.02.01_Петров Перт Петровичaaa_Иванов Иван Ивановичaaa_ВКР.docx  2018год_Бакалавриат_38.02.04_цйцad awdawddd_Иванов Иван Иванович_ВКР.docx  README.md  install.md  pyproject.toml
backend/apps/reference/: admin.py  apps.py  models.py
backend/apps/reference/migrations/: 0001_initial.py  0002_alter_qualification_code.py
backend/apps/services/management/commands/: sandbox.py
backend/apps/storage/: admin.py  apps.py  filters.py  forms.py  models.py  views.py
backend/apps/storage/migrations/: 0001_initial.py  0002_auto_20220522_2030.py  0003_auto_20220522_2223.py
backend/apps/users/: admin.py  models.py
backend/apps/users/migrations/: 0003_alter_proxygroup_options.py
backend/src/: urls.py
backend/src/settings/base/: apps.py
backend/src/settings/components/: __init__.py  paths.py
backend/src/settings/environments/: common.py  development.py
frontend/static/css/: style.css
frontend/templates/: detail-package-documents.html  landing.html  list-package-documents.html  upload-package-documents.html
frontend/templates/apps/news/: news-list.html
frontend/templates/components/: header.html
frontend/templates/layouts/: base.html
frontend/templates/registration/: login.html
